<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/body_gradient_bg"
    tools:context="com.deepak.projectqat.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:alpha="0.2"
            android:src="@drawable/background_app" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_top_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/title_txt_size" />

        <TextView
            android:id="@+id/lbl_quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_from_title_for_quote"
            android:text="@string/app_quote"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/quote_txt_size" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bottom_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/edit_text_margin"
            android:layout_marginStart="@dimen/edit_text_margin"
            android:textColorHint="@color/colorWhite">

            <EditText
                android:id="@+id/input_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/edit_text_margin"
            android:layout_marginStart="@dimen/edit_text_margin"
            android:layout_marginTop="@dimen/margin_bw_edittext"
            android:textColorHint="@color/colorWhite">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/edit_text_margin"
            android:layout_marginStart="@dimen/edit_text_margin"
            android:layout_marginTop="@dimen/margin_bw_edittext"
            android:textColorHint="@color/colorWhite"
            android:visibility="gone">

            <EditText
                android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/sign_in_button"
                android:text="@string/sign_in"
                android:textColor="@color/colorWhite"
                android:background="@drawable/rounded_button"
                android:layout_marginStart="@dimen/margin_button"
                android:layout_marginEnd="@dimen/margin_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/margin_bw_button"
                android:text="@string/not_an_user_sign_up"/>

            <Button
                android:visibility="gone"
                android:id="@+id/sign_up_button"
                android:text="@string/sign_up"
                android:textColor="@color/colorWhite"
                android:background="@drawable/rounded_button"
                android:layout_marginStart="@dimen/margin_button"
                android:layout_marginEnd="@dimen/margin_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_sign_in"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/margin_bw_button"
                android:text="@string/already_user_sign_in"/>

        </LinearLayout>


    </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
