<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:elevation="4dp"
        card_view:cardCornerRadius="0dp">

        <RelativeLayout
            android:id="@+id/q_no"
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_q_no"
                android:textColor="#000"
                android:id="@+id/q_no_tv" />

            <TextView
                android:id="@+id/quest_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/q_no_tv"
                android:text="@string/dummy_question" />

            <RadioGroup
                android:layout_below="@id/quest_tv"
                android:id="@+id/radioGroupQues"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/q_no_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/ans_a_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:buttonTint="@color/colorMain"
                    android:text="@string/option"/>

                <RadioButton
                    android:id="@+id/ans_b_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:buttonTint="@color/colorMain"
                    android:text="@string/option"/>

                <RadioButton
                    android:id="@+id/ans_c_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:buttonTint="@color/colorMain"
                    android:text="@string/option"/>

                <RadioButton
                    android:id="@+id/ans_d_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:buttonTint="@color/colorMain"
                    android:text="@string/option"/>


            </RadioGroup>

        </RelativeLayout>

        </android.support.v7.widget.CardView>


</LinearLayout>