<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/main_land_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/colorMain">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:alpha="0.2"
            android:src="@drawable/background_app" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_topic_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"
                android:textSize="@dimen/topic_title_size"
                android:text="@string/dummy_topic_name"/>

            <TextView
                android:id="@+id/lbl_set_no"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/dummy_set_no"/>


        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/no_connection"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                android:alpha="0.8"
                android:layout_gravity="center"
                android:contentDescription="@string/text_internet_connection"
                android:src="@drawable/no_connection"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_internet_connection"
                />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:orientation="vertical">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:shimmer="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/main_land"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:layout_weight="1"
            android:gravity="center"
            tools:context="info.androidhive.shimmer.MainActivity">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_view_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                shimmer:duration="800">

                <!-- Adding 3 rows of placeholders -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/placeholder_item" />

                    <include layout="@layout/placeholder_item" />

                    <include layout="@layout/placeholder_item" />


                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />


            <!--<ImageView-->
                <!--android:id="@+id/no_internet"-->
                <!--android:visibility="gone"-->
                <!--android:layout_width="120dp"-->
                <!--android:layout_height="120dp"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:layout_centerInParent="true"-->
                <!--android:src="@drawable/no_internet"-->
                <!--/>-->



        </RelativeLayout>

        <Button
            android:id="@+id/submit_test_btn"
            android:textColor="@color/colorWhite"
            android:background="@color/colorMain"
            android:text="@string/submit"
            android:visibility="gone"
            android:layout_weight="0"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>


</LinearLayout>